feat!: custom research recog & action
- 添加博物研学升/降阶的自定义 Recog & Action
- 支持博物研学升/降阶策略的配置

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -4,6 +4,10 @@ get_filename_component(SOURCE_DIR src REALPATH)
 nice_target_sources(whmx-assistant ${SOURCE_DIR}
 PRIVATE
     main.cpp
+    CustomAction/Research.cpp
+    CustomAction/Research.h
+    CustomRecognizer/Research.cpp
+    CustomRecognizer/Research.h
 )
 
 target_link_libraries(whmx-assistant
