chore: add deploy step

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -43,6 +43,10 @@ DESTINATION ${CMAKE_INSTALL_PREFIX}
 PATTERN .gitkeep EXCLUDE
 )
 
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/config
+DESTINATION ${CMAKE_INSTALL_PREFIX}
+)
+
 nice_install_files(${CMAKE_INSTALL_PREFIX}
 ABSOLUTE
     $<REMOVE_DUPLICATES:$<TARGET_RUNTIME_DLLS:whmx-assistant>>
@@ -51,4 +55,18 @@ RELATIVE ${CMAKE_SOURCE_DIR}/deps/MaaFramework/bin
     opencv_world4_maa.dll
     fastdeploy_ppocr_maa.dll
     MaaAdbControlUnit.dll
+)
+
+add_custom_target(predeploy
+COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --config $<CONFIG> --target install
+)
+
+add_custom_target(deploy
+COMMAND
+    windeployqt ${CMAKE_INSTALL_PREFIX}/$<TARGET_FILE_NAME:whmx-assistant>
+    --verbose 0
+    --no-quick-import
+    --no-translations
+    --no-libraries
+DEPENDS predeploy
 )
