--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/MaaFramework"]
 	path = deps/MaaFramework
 	url = https://github.com/MAWHA/maafw-prebuild
+[submodule "deps/magic_enum"]
+	path = deps/magic_enum
+	url = https://github.com/Neargye/magic_enum.git
