--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,13 @@ endif()
 
 include(cmake/version.cmake)
 desktop_app_parse_version(whmx-assistant/build/VERSION)
+set(desktop_app_homepage_url "https://github.com/MAWHA/maa-whmx")
 
 project(maa-whmx
 LANGUAGES C CXX
 VERSION ${desktop_app_version_cmake}
+HOMEPAGE_URL ${desktop_app_homepage_url}
 DESCRIPTION "Wuhuamixin assistant powered by MAA framework."
-HOMEPAGE_URL "https://github.com/MAWHA/maa-whmx"
 )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -24,7 +25,13 @@ include(cmake/install_agents.cmake)
 include(cmake/config_maafw.cmake)
 include(cmake/config_opencv.cmake)
 
+set(MAGIC_ENUM_OPT_BUILD_EXAMPLES OFF)
+set(MAGIC_ENUM_OPT_BUILD_TESTS OFF)
+set(MAGIC_ENUM_OPT_INSTALL OFF)
+add_subdirectory(deps/magic_enum)
+
 add_subdirectory(deps/Qt6)
+add_subdirectory(deps/qt-material-widgets)
 add_subdirectory(whmx-assistant)
 
 set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT whmx-assistant)
