feat!: support beat four-in-a-row
- 新增派遣公司四子棋实现及流水线

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -66,6 +66,8 @@ PRIVATE
     UI/Client.h
     CustomAction/Research.cpp
     CustomAction/Research.h
+    CustomAction/FourInRow.h
+    CustomAction/FourInRow.cpp
     CustomRecognizer/Research.cpp
     CustomRecognizer/Research.h
 )
