chore: install ppocr_v4/zh_cn as default ocr model

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -106,6 +106,15 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/config
 DESTINATION ${CMAKE_INSTALL_PREFIX}
 )
 
+set(OCR_MODEL_DIR assets/general/model/ocr)
+set(DEFAULT_OCR_MODEL ppocr_v4/zh_cn)
+nice_install_files(${CMAKE_INSTALL_PREFIX}/${OCR_MODEL_DIR}
+RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/${OCR_MODEL_DIR}/${DEFAULT_OCR_MODEL}
+    det.onnx
+    rec.onnx
+    keys.txt
+)
+
 nice_install_files(${CMAKE_INSTALL_PREFIX}
 ABSOLUTE
     $<REMOVE_DUPLICATES:$<TARGET_RUNTIME_DLLS:whmx-assistant>>
