feat: impl part of task-config-panel

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -62,6 +62,8 @@ PRIVATE
     UI/DeviceConn.h
     UI/Settings.cpp
     UI/Settings.h
+    UI/TaskConfigPanel.cpp
+    UI/TaskConfigPanel.h
     UI/Client.cpp
     UI/Client.h
     CustomAction/Research.cpp
