feat: add custom method utils for task combination

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -75,6 +75,8 @@ PRIVATE
     CustomAction/Research.h
     CustomAction/FourInRow.h
     CustomAction/FourInRow.cpp
+    CustomRecognizer/Utils.cpp
+    CustomRecognizer/Utils.h
     CustomRecognizer/Research.cpp
     CustomRecognizer/Research.h
 )
