feat!: select combat route in research
- 增加对研学战斗路线选择的支持
- 添加研学自选地图的对应任务绑定

--- a/whmx-assistant/assets/data/roi.toml
+++ b/whmx-assistant/assets/data/roi.toml
@@ -91,6 +91,9 @@ roi = [0, 0, 62, 77]
 ["Combat/MaskedAutoFightDisabled.png"]
 roi = [0, 0, 62, 77]
 
+["Combat/Hint.png"]
+roi = [78, 24, 104, 24]
+
 ["Combat/Mopup"]
 text = "速通"
 roi = [979, 630, 102, 52]
