--- a/whmx-assistant/assets/data/roi.toml
+++ b/whmx-assistant/assets/data/roi.toml
@@ -22,6 +22,10 @@ roi = [880, 540, 170, 60]
 ["Research/GradeOption/Hint.png"]
 roi = [425, 661, 430, 23]
 
+["Research/GradeOption/Type"]
+hint = "升阶/降阶文本"
+roi = [608, 147, 65, 32]
+
 ["Research/Buff/Confirm.png"]
 roi = [520, 619, 240, 49]
 
