--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.23)
+﻿cmake_minimum_required(VERSION 3.23)
 if(POLICY CMP0149)
     cmake_policy(SET CMP0149 NEW)
 endif()
@@ -26,6 +26,7 @@ set(CMAKE_AUTORCC ON)
 include(cmake/nice_target_sources.cmake)
 include(cmake/nice_install_files.cmake)
 include(cmake/install_agents.cmake)
+include(cmake/file_copy_target.cmake)
 include(cmake/config_maafw.cmake)
 include(cmake/config_opencv.cmake)
 include(cmake/config_qt6.cmake)
