--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_executable(whmx-assistant WIN32 MACOSX_BUNDLE)
+﻿add_executable(whmx-assistant WIN32 MACOSX_BUNDLE)
+
+set (OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")
 
 configure_file(
 	${CMAKE_CURRENT_SOURCE_DIR}/src/Version.cpp.in
@@ -99,65 +101,108 @@ PRIVATE
     desktop-app::qt-material-widgets
 )
 
-install(TARGETS whmx-assistant
-RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
+# Output directory
+set_target_properties(whmx-assistant PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR}")
+if(${CMAKE_GENERATOR} MATCHES "Visual Studio*")
+    set_target_properties(whmx-assistant PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIR}")
+    set_target_properties(whmx-assistant PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIR}")
+endif()
+
+# Copy Dlls
+add_custom_command(
+    TARGET whmx-assistant POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            $<TARGET_RUNTIME_DLLS:whmx-assistant> $<TARGET_FILE_DIR:whmx-assistant>
+    COMMAND_EXPAND_LISTS
 )
 
-install_agents(
-${CMAKE_SOURCE_DIR}/deps/MaaFramework/share/MaaAgentBinary
-${CMAKE_INSTALL_PREFIX}/agents
+# Copy Maa
+file_copy_target(copy_maa
+    GLOB "*"
+    SRC_DIR ${CMAKE_SOURCE_DIR}/deps/MaaFramework/share/MaaAgentBinary
+    DST_DIR ${OUTPUT_DIR}/agents
+    MSG_NAME "MAA files"
+)
+add_dependencies(copy_maa MaaFramework::MaaPP)
+
+# Copy assets
+file_copy_target(copy_assets
+    GLOB "*"
+    SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets
+    DST_DIR ${OUTPUT_DIR}/assets
+    MSG_NAME "assets files"
 )
 
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/assets
-DESTINATION ${CMAKE_INSTALL_PREFIX}
-PATTERN .gitkeep EXCLUDE
+# Copy configs
+file_copy_target(copy_configs
+    GLOB "*"
+    SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/config
+    DST_DIR ${OUTPUT_DIR}/config
+    MSG_NAME "config files"
 )
 
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/config
-DESTINATION ${CMAKE_INSTALL_PREFIX}
-)
-
+# Copy OCR models
 set(OCR_MODEL_DIR assets/general/model/ocr)
 set(DEFAULT_OCR_MODEL ppocr_v4/zh_cn)
-nice_install_files(${CMAKE_INSTALL_PREFIX}/${OCR_MODEL_DIR}
-RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/${OCR_MODEL_DIR}/${DEFAULT_OCR_MODEL}
-    det.onnx
-    rec.onnx
-    keys.txt
+set(OCR_MODEL_LIST
+    "det.onnx"
+    "rec.onnx"
+    "keys.txt"
+)
+file_copy_target(copy_ocr_models
+    GLOB ${OCR_MODEL_LIST}
+    SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${OCR_MODEL_DIR}/${DEFAULT_OCR_MODEL}
+    DST_DIR ${OUTPUT_DIR}/${OCR_MODEL_DIR}
+    MSG_NAME "OCR model files"
 )
 
-nice_install_files(${CMAKE_INSTALL_PREFIX}
-ABSOLUTE
-    $<REMOVE_DUPLICATES:$<TARGET_RUNTIME_DLLS:whmx-assistant>>
-RELATIVE ${CMAKE_SOURCE_DIR}/deps/MaaFramework/bin
-    onnxruntime_maa.dll
-    opencv_world4_maa.dll
-    fastdeploy_ppocr_maa.dll
-    MaaAdbControlUnit.dll
+# Copy MAA Dlls
+set(MAA_DLL_LIST
+    "onnxruntime_maa.dll"
+    "opencv_world4_maa.dll"
+    "fastdeploy_ppocr_maa.dll"
+    "MaaAdbControlUnit.dll"
+)
+file_copy_target(copy_maa_dlls
+    GLOB ${MAA_DLL_LIST}
+    SRC_DIR ${CMAKE_SOURCE_DIR}/deps/MaaFramework/bin
+    DST_DIR ${OUTPUT_DIR}
+    MSG_NAME "MAA library files"
+)
+add_dependencies(copy_maa_dlls MaaFramework::MaaPP)
+
+# Add dependencies
+add_dependencies(whmx-assistant
+    copy_maa copy_assets copy_configs
+    copy_ocr_models copy_maa_dlls
 )
 
-add_custom_target(pre-deploy
-COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --config $<CONFIG> --target install
-)
-
+# Qt deploy
 find_program(WINDEPLOYQT_EXECUTABLE NAMES windeployqt)
 message(STATUS "Windeployqt executable path: ${WINDEPLOYQT_EXECUTABLE}")
 
-add_custom_target(deploy
-COMMAND
-    "${WINDEPLOYQT_EXECUTABLE}" "${CMAKE_INSTALL_PREFIX}/$<TARGET_FILE_NAME:whmx-assistant>"
+get_filename_component(WINDEPLOYQT_DIR ${WINDEPLOYQT_EXECUTABLE} DIRECTORY)
+set(WINDEPLOYQT_DEBUG_EXECUTABLE "${WINDEPLOYQT_DIR}/windeployqt.debug.bat")
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(WINDEPLOYQT_CMD "${WINDEPLOYQT_DEBUG_EXECUTABLE}")
+    set(WINDEPLOYQT_TYPE_ARGS "--debug")
+    if(MSVC)
+        set(WINDEPLOYQT_TYPE_ARGS ${WINDEPLOYQT_TYPE_ARGS} "--pdb")
+    endif()
+else()
+    set(WINDEPLOYQT_CMD "${WINDEPLOYQT_EXECUTABLE}")
+    set(WINDEPLOYQT_TYPE_ARGS "--release")
+endif()
+
+add_custom_command(
+    TARGET whmx-assistant POST_BUILD
+    COMMAND
+    "${WINDEPLOYQT_CMD}" "$<TARGET_FILE:whmx-assistant>"
     --verbose 0
     --no-quick-import
     --no-translations
     --no-libraries
-    $<$<CONFIG:Debug>:--debug>
-    $<$<CONFIG:Release>:--release>
-DEPENDS pre-deploy
+    --force
+    ${WINDEPLOYQT_TYPE_ARGS}
 )
-
-add_custom_target(post-deploy
-COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_INSTALL_PREFIX} $<TARGET_FILE_DIR:whmx-assistant>
-DEPENDS deploy
-)
-
-add_custom_target(deploy-all DEPENDS post-deploy)
