chore: use vcpkg and update build steps (#8)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,28 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
 include(cmake/nice_target_sources.cmake)
 include(cmake/nice_install_files.cmake)
 include(cmake/install_agents.cmake)
+include(cmake/file_copy_target.cmake)
 include(cmake/config_maafw.cmake)
 include(cmake/config_opencv.cmake)
+include(cmake/config_qt6.cmake)
+
+# Get the library directory for the current platform
+set(VCPKG_LIBRARY_ROOT "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
+set(VCPKG_LIBRARY_DIR "${VCPKG_LIBRARY_ROOT}/bin")
+set(VCPKG_DEBUG_LIBRARY_DIR "${VCPKG_LIBRARY_ROOT}/debug/bin")
+
+# Print the library paths
+message(STATUS "Vcpkg library directory: ${VCPKG_LIBRARY_DIR}")
+message(STATUS "Vcpkg debug library directory: ${VCPKG_DEBUG_LIBRARY_DIR}")
+
+set (OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")
 
 set(MAGIC_ENUM_OPT_BUILD_EXAMPLES OFF)
 set(MAGIC_ENUM_OPT_BUILD_TESTS OFF)
@@ -31,68 +48,10 @@ set(MAGIC_ENUM_OPT_INSTALL OFF)
 add_subdirectory(deps/magic_enum)
 
 add_subdirectory(deps/FileLocksmithLibInterop)
-add_subdirectory(deps/Qt6)
 add_subdirectory(deps/qt-material-widgets)
 add_subdirectory(whmx-assistant)
 add_subdirectory(launcher)
 
+add_dependencies(launcher whmx-assistant)
+
 set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT whmx-assistant)
-
-install(TARGETS whmx-assistant launcher
-RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
-)
-
-install_agents(
-${CMAKE_SOURCE_DIR}/deps/MaaFramework/share/MaaAgentBinary
-${CMAKE_INSTALL_PREFIX}/agents
-)
-
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/whmx-assistant/assets
-DESTINATION ${CMAKE_INSTALL_PREFIX}
-PATTERN .gitkeep EXCLUDE
-)
-
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/whmx-assistant/config
-DESTINATION ${CMAKE_INSTALL_PREFIX}
-)
-
-set(OCR_MODEL_DIR assets/general/model/ocr)
-set(DEFAULT_OCR_MODEL ppocr_v4/zh_cn)
-nice_install_files(${CMAKE_INSTALL_PREFIX}/${OCR_MODEL_DIR}
-RELATIVE ${CMAKE_SOURCE_DIR}/whmx-assistant/${OCR_MODEL_DIR}/${DEFAULT_OCR_MODEL}
-    det.onnx
-    rec.onnx
-    keys.txt
-)
-
-nice_install_files(${CMAKE_INSTALL_PREFIX}
-ABSOLUTE
-    $<REMOVE_DUPLICATES:$<TARGET_RUNTIME_DLLS:whmx-assistant>>
-    $<REMOVE_DUPLICATES:$<TARGET_RUNTIME_DLLS:launcher>>
-RELATIVE ${CMAKE_SOURCE_DIR}/deps/MaaFramework/bin
-    onnxruntime_maa.dll
-    opencv_world4_maa.dll
-    fastdeploy_ppocr_maa.dll
-    MaaAdbControlUnit.dll
-)
-
-add_custom_target(pre-deploy
-COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --config $<CONFIG> --target install
-)
-
-add_custom_target(deploy
-COMMAND
-    windeployqt ${CMAKE_INSTALL_PREFIX}/$<TARGET_FILE_NAME:whmx-assistant>
-    --verbose 0
-    --no-quick-import
-    --no-translations
-    --no-libraries
-DEPENDS pre-deploy
-)
-
-add_custom_target(post-deploy
-COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_INSTALL_PREFIX} $<TARGET_FILE_DIR:whmx-assistant>
-DEPENDS deploy
-)
-
-add_custom_target(deploy-all DEPENDS post-deploy)
