Add build workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Created by https://www.toptal.com/developers/gitignore/api/c++,c,python,qt,opencv
+﻿# Created by https://www.toptal.com/developers/gitignore/api/c++,c,python,qt,opencv
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,c,python,qt,opencv
 
 ### C ###
@@ -275,7 +275,7 @@ ui_*.h
 *.qmlc
 *.jsc
 Makefile*
-*build-*
+*build-*/
 *.qm
 *.prl
 
@@ -312,3 +312,5 @@ install
 .vs
 
 vcpkg_installed/**
+
+!.github/**
