Fixed workflow binary list output

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -71,9 +71,9 @@ jobs:
       working-directory: ${{github.workspace}}
       shell: pwsh
       run: |
-        $result = & ./scripts/ci/find-binary.ps1 -DirectoryPath "./${{matrix.build-path}}/bin"
+        $result = ./scripts/ci/find-binary.ps1 -DirectoryPath "./${{matrix.build-path}}/bin"
         echo "exec_files=$result" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8
-        Write-Host "Found executable and dynamic library files:" + $result
+        Write-Host "Found executable and dynamic library files: $result"
 
     - name: Generate Artifact Attestation
       if: github.event_name != 'pull_request'
