Fixed workflow artifacts path

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -94,8 +94,9 @@ jobs:
       with:
         name: whmx-assistant-${{runner.os}}-${{runner.arch}}-${{matrix.build-type}}-${{steps.short-sha.outputs.sha}}
         path: |
-          "${{matrix.build-path}}/bin/**"
+          "${{matrix.build-path}}/bin/"
         compression-level: 9
+        if-no-files-found: error
 
     - name: Archive Artifacts (Not Signed)
       if: github.event_name == 'pull_request'
@@ -103,5 +104,6 @@ jobs:
       with:
         name: whmx-assistant-${{runner.os}}-${{runner.arch}}-${{matrix.build-type}}-${{steps.short-sha.outputs.sha}}-Unsafe
         path: |
-          "${{matrix.build-path}}/bin/**"
+          "${{matrix.build-path}}/bin/"
         compression-level: 9
+        if-no-files-found: error
