chore: strip duplicate opencv dll

--- a/whmx-assistant/CMakeLists.txt
+++ b/whmx-assistant/CMakeLists.txt
@@ -97,7 +97,6 @@ PRIVATE
     magic_enum::magic_enum
     desktop-app::Qt6
     desktop-app::qt-material-widgets
-    FileLocksmith::LibInterop
 )
 
 # Output directory
@@ -107,37 +106,37 @@ if(${CMAKE_GENERATOR} MATCHES "Visual Studio*")
     set_target_properties(whmx-assistant PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIR}")
 endif()
 
+
 # Copy Dlls
-add_custom_command(
-    TARGET whmx-assistant POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            $<TARGET_RUNTIME_DLLS:whmx-assistant> $<TARGET_FILE_DIR:whmx-assistant>
-    COMMAND_EXPAND_LISTS
+add_custom_command(TARGET whmx-assistant POST_BUILD
+COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    $<TARGET_RUNTIME_DLLS:whmx-assistant> $<TARGET_FILE_DIR:whmx-assistant>
+COMMAND_EXPAND_LISTS
 )
 
 # Copy Maa
 file_copy_target(copy_maa
-    GLOB "*"
-    SRC_DIR ${CMAKE_SOURCE_DIR}/deps/MaaFramework/share/MaaAgentBinary
-    DST_DIR ${OUTPUT_DIR}/agents
-    MSG_NAME "MAA files"
+GLOB "*"
+SRC_DIR ${CMAKE_SOURCE_DIR}/deps/MaaFramework/share/MaaAgentBinary
+DST_DIR ${OUTPUT_DIR}/agents
+MSG_NAME "MAA files"
 )
 add_dependencies(copy_maa MaaFramework::MaaPP)
 
 # Copy assets
 file_copy_target(copy_assets
-    GLOB "*"
-    SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets
-    DST_DIR ${OUTPUT_DIR}/assets
-    MSG_NAME "assets files"
+GLOB "*"
+SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets
+DST_DIR ${OUTPUT_DIR}/assets
+MSG_NAME "assets files"
 )
 
 # Copy configs
 file_copy_target(copy_configs
-    GLOB "*"
-    SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/config
-    DST_DIR ${OUTPUT_DIR}/config
-    MSG_NAME "config files"
+GLOB "*"
+SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/config
+DST_DIR ${OUTPUT_DIR}/config
+MSG_NAME "config files"
 )
 
 # Copy OCR models
@@ -149,10 +148,10 @@ set(OCR_MODEL_LIST
     "keys.txt"
 )
 file_copy_target(copy_ocr_models
-    GLOB ${OCR_MODEL_LIST}
-    SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${OCR_MODEL_DIR}/${DEFAULT_OCR_MODEL}
-    DST_DIR ${OUTPUT_DIR}/${OCR_MODEL_DIR}
-    MSG_NAME "OCR model files"
+GLOB ${OCR_MODEL_LIST}
+SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${OCR_MODEL_DIR}/${DEFAULT_OCR_MODEL}
+DST_DIR ${OUTPUT_DIR}/${OCR_MODEL_DIR}
+MSG_NAME "OCR model files"
 )
 
 # Copy MAA Dlls
@@ -163,17 +162,20 @@ set(MAA_DLL_LIST
     "MaaAdbControlUnit.dll"
 )
 file_copy_target(copy_maa_dlls
-    GLOB ${MAA_DLL_LIST}
-    SRC_DIR ${CMAKE_SOURCE_DIR}/deps/MaaFramework/bin
-    DST_DIR ${OUTPUT_DIR}
-    MSG_NAME "MAA library files"
+GLOB ${MAA_DLL_LIST}
+SRC_DIR ${CMAKE_SOURCE_DIR}/deps/MaaFramework/bin
+DST_DIR ${OUTPUT_DIR}
+MSG_NAME "MAA library files"
 )
 add_dependencies(copy_maa_dlls MaaFramework::MaaPP)
 
 # Add dependencies
 add_dependencies(whmx-assistant
-    copy_maa copy_assets copy_configs
-    copy_ocr_models copy_maa_dlls
+    copy_maa
+    copy_assets
+    copy_configs
+    copy_ocr_models
+    copy_maa_dlls
 )
 
 # Qt deploy
@@ -194,9 +196,8 @@ else()
     set(WINDEPLOYQT_TYPE_ARGS "--release")
 endif()
 
-add_custom_command(
-    TARGET whmx-assistant POST_BUILD
-    COMMAND
+add_custom_command(TARGET whmx-assistant POST_BUILD
+COMMAND
     "${WINDEPLOYQT_CMD}" "$<TARGET_FILE:whmx-assistant>"
     --verbose 0
     --no-quick-import
